--- a/src/app/components/voter/voter.component.css
+++ b/src/app/components/voter/voter.component.css
@@ -2,117 +2,95 @@ table {
   width: 100%;
 }
 
-@import '~@swimlane/ngx-datatable/index.css';
-@import '~@swimlane/ngx-datatable/themes/bootstrap.css';
-@import '~@swimlane/ngx-datatable/assets/icons.css';
-
 .ngx-datatable.bootstrap {
-  background-color: transparent;
-  box-shadow: 0 0 0 #000;
+  box-shadow: none;
+  font-size: 13px;
 }
 
-.ngx-datatable.scroll-vertical {
-  height: 300px;
+.ngx-datatable.bootstrap .datatable-header {
+  height: unset !important;
 }
 
-.no-detail-row .datatable-row-detail {
-  display: none !important;
+.ngx-datatable.bootstrap .datatable-header .datatable-header-cell {
+  vertical-align: bottom;
+  padding: 0.75rem;
+  border-bottom: 1px solid #d1d4d7;
 }
 
-.ngx-datatable.bootstrap.single-selection .datatable-body-row.active,
-.ngx-datatable.bootstrap.single-selection .datatable-body-row.active .datatable-row-group,
-.ngx-datatable.bootstrap.multi-selection .datatable-body-row.active,
-.ngx-datatable.bootstrap.multi-selection .datatable-body-row.active .datatable-row-group,
-.ngx-datatable.bootstrap.multi-click-selection .datatable-body-row.active,
-.ngx-datatable.bootstrap.multi-click-selection .datatable-body-row.active .datatable-row-group,
-.ngx-datatable.bootstrap.single-selection .datatable-body-row.active:hover,
-.ngx-datatable.bootstrap.single-selection .datatable-body-row.active:hover .datatable-row-group,
-.ngx-datatable.bootstrap.multi-selection .datatable-body-row.active:hover,
-.ngx-datatable.bootstrap.multi-selection .datatable-body-row.active:hover .datatable-row-group,
-.ngx-datatable.bootstrap.multi-click-selection .datatable-body-row.active:hover,
-.ngx-datatable.bootstrap.multi-click-selection .datatable-body-row.active:hover .datatable-row-group {
-  background-color: red !important;
+.ngx-datatable.bootstrap .datatable-header .datatable-header-cell .datatable-header-cell-label {
+  line-height: 24px;
 }
 
-.datatable-body-cell {
-  color: #106cc8;
+.ngx-datatable.bootstrap .datatable-body {
+
 }
 
-.datatable-icon-right {
-  text-decoration: none !important;
+.ngx-datatable.bootstrap .datatable-body .datatable-body-row {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #d1d4d7;
 }
 
-.ngx-datatable.bootstrap .empty-row {
-  text-align: center;
-  margin-top: 20px;
+.ngx-datatable.bootstrap .datatable-body .datatable-body-row.datatable-row-even {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.ngx-datatable.bootstrap .datatable-body .datatable-body-row .datatable-body-cell {
+  text-align: left;
+  vertical-align: top;
+}
+
+.ngx-datatable.bootstrap .datatable-body .datatable-body-row.active {
+  background-color: #1483ff;
+  color: #FFF;
 }
 
 .ngx-datatable.bootstrap .datatable-footer {
-  background-color: transparent;
-  color: red;
+  background: #424242;
+  color: #ededed;
+  margin-top: -1px;
 }
 
-.ngx-datatable.bootstrap .datatable-footer .datatable-pager a {
-  color: blue;
+.ngx-datatable.bootstrap .datatable-footer .page-count {
+  line-height: 50px;
+  height: 50px;
+  padding: 0 1.2rem;
 }
 
-.pager li > a,
-.pager li > span {
-  border-color: black;
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager {
+  margin: 0 10px;
+  vertical-align: top;
+}
+
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager ul li {
+  margin: 10px 0px;
 }
 
 .ngx-datatable.bootstrap .datatable-footer .datatable-pager ul li:not(.disabled).active a,
 .ngx-datatable.bootstrap .datatable-footer .datatable-pager ul li:not(.disabled):hover a {
-  background-color: blue;
-  border-color: blue;
-  color: #fff;
+  background-color: #545454;
+  font-weight: bold;
 }
 
-.ngx-datatable.bootstrap .datatable-body .datatable-body-row {
-  border: 0;
-}
-
-.ngx-datatable.bootstrap .datatable-body .datatable-body-row.datatable-row-even {
-  background-color: rgba(0, 0, 0, 0.025);
-}
-
-.ngx-datatable.bootstrap .datatable-body .progress-linear {
-  display: block;
-  position: relative;
-  width: 100%;
-  height: 5px;
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager a {
+  height: 22px;
+  min-width: 24px;
+  line-height: 22px;
   padding: 0;
-  margin: 0;
-  position: absolute;
+  border-radius: 3px;
+  margin: 0 3px;
+  text-align: center;
+  vertical-align: top;
+  text-decoration: none;
+  vertical-align: bottom;
+  color: #ededed;
 }
 
-.ngx-datatable.bootstrap .datatable-body .progress-linear .container {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 5px;
-  -webkit-transform: translate(0, 0) scale(1, 1);
-  transform: translate(0, 0) scale(1, 1);
-  background-color: #aad1f9;
-}
-
-.ngx-datatable.bootstrap .datatable-body .progress-linear .container .bar {
-  transition: all .2s linear;
-  -webkit-animation: query 0.8s infinite cubic-bezier(0.39, 0.575, 0.565, 1);
-  animation: query 0.8s infinite cubic-bezier(0.39, 0.575, 0.565, 1);
-  transition: -webkit-transform .2s linear;
-  transition: transform .2s linear;
-  background-color: #106cc8;
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: auto;
-  height: 5px;
-}
-
-.wrapper .aside-container .aside-inner,
-.wrapper .aside-container {
-  width: 230px;
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager .datatable-icon-left,
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager .datatable-icon-skip,
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager .datatable-icon-right,
+.ngx-datatable.bootstrap .datatable-footer .datatable-pager .datatable-icon-prev {
+  font-size: 18px;
+  line-height: 27px;
+  padding: 0 3px;
 }
